--- a/app/src/main/res/drawable/ic_fondo_items.xml
+++ b/app/src/main/res/drawable/ic_fondo_items.xml
@@ -1,42 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="249dp"
-    android:height="100dp"
-    android:viewportWidth="249"
-    android:viewportHeight="100">
+    android:width="96dp"
+    android:height="96dp"
+    android:viewportWidth="96"
+    android:viewportHeight="96">
   <path
-      android:pathData="M0,0C82.17,0 164.34,0 249,0C249,33 249,66 249,100C166.83,100 84.66,100 0,100C0,67 0,34 0,0Z"
-      android:fillColor="#6E6E6E"/>
+      android:pathData="M0,0C31.68,0 63.36,0 96,0C96,31.68 96,63.36 96,96C64.32,96 32.64,96 0,96C0,64.32 0,32.64 0,0Z"
+      android:fillColor="#8B8B8B"/>
   <path
-      android:pathData="M0,0C82.17,0 164.34,0 249,0C249,33 249,66 249,100C166.83,100 84.66,100 0,100C0,67 0,34 0,0ZM5,5C5,34.7 5,64.4 5,95C83.87,95 162.74,95 244,95C244,65.3 244,35.6 244,5C165.13,5 86.26,5 5,5Z"
-      android:fillColor="#000000"/>
+      android:pathData="M0,0C31.68,0 63.36,0 96,0C96,31.68 96,63.36 96,96C64.32,96 32.64,96 0,96C0,64.32 0,32.64 0,0ZM4,4C4,31.72 4,59.44 4,88C31.72,88 59.44,88 88,88C88,61.6 88,35.2 88,8C89.32,8 90.64,8 92,8C92,6.68 92,5.36 92,4C62.96,4 33.92,4 4,4Z"
+      android:fillColor="#CBCBCB"/>
   <path
-      android:pathData="M239,5C240.65,5 242.3,5 244,5C244,34.7 244,64.4 244,95C165.13,95 86.26,95 5,95C5,91.7 5,88.4 5,85C82.22,85 159.44,85 239,85C239,58.6 239,32.2 239,5Z"
-      android:fillColor="#555555"/>
+      android:pathData="M4,4C33.04,4 62.08,4 92,4C92,5.32 92,6.64 92,8C64.28,8 36.56,8 8,8C8,34.4 8,60.8 8,88C6.68,88 5.36,88 4,88C4,60.28 4,32.56 4,4Z"
+      android:fillColor="#373737"/>
   <path
-      android:pathData="M5,5C82.22,5 159.44,5 239,5C239,6.65 239,8.3 239,10C163.43,10 87.86,10 10,10C10,34.75 10,59.5 10,85C8.35,85 6.7,85 5,85C5,58.6 5,32.2 5,5Z"
-      android:fillColor="#A9A9A9"/>
-  <path
-      android:pathData="M5,85C6.65,85 8.3,85 10,85C10,88.3 10,91.6 10,95C8.35,95 6.7,95 5,95C5,91.7 5,88.4 5,85Z"
-      android:fillColor="#707070"/>
-  <path
-      android:pathData="M80,80C81.65,80 83.3,80 85,80C85,81.65 85,83.3 85,85C83.35,85 81.7,85 80,85C80,83.35 80,81.7 80,80Z"
-      android:fillColor="#7A7A7A"/>
-  <path
-      android:pathData="M40,80C41.65,80 43.3,80 45,80C45,81.65 45,83.3 45,85C43.35,85 41.7,85 40,85C40,83.35 40,81.7 40,80Z"
-      android:fillColor="#656565"/>
-  <path
-      android:pathData="M195,65C196.65,65 198.3,65 200,65C200,66.65 200,68.3 200,70C198.35,70 196.7,70 195,70C195,68.35 195,66.7 195,65Z"
-      android:fillColor="#747474"/>
-  <path
-      android:pathData="M65,55C66.65,55 68.3,55 70,55C70,56.65 70,58.3 70,60C68.35,60 66.7,60 65,60C65,58.35 65,56.7 65,55Z"
-      android:fillColor="#666666"/>
-  <path
-      android:pathData="M239,45C240.65,45 242.3,45 244,45C244,46.65 244,48.3 244,50C242.35,50 240.7,50 239,50C239,48.35 239,46.7 239,45Z"
-      android:fillColor="#4F4F4F"/>
-  <path
-      android:pathData="M80,20C81.65,20 83.3,20 85,20C85,21.65 85,23.3 85,25C83.35,25 81.7,25 80,25C80,23.35 80,21.7 80,20Z"
-      android:fillColor="#656565"/>
-  <path
-      android:pathData="M239,5C240.65,5 242.3,5 244,5C244,6.65 244,8.3 244,10C242.35,10 240.7,10 239,10C239,8.35 239,6.7 239,5Z"
-      android:fillColor="#6F6F6F"/>
+      android:pathData="M88,8C89.32,8 90.64,8 92,8C92,35.72 92,63.44 92,92C64.28,92 36.56,92 8,92C8,90.68 8,89.36 8,88C34.4,88 60.8,88 88,88C88,61.6 88,35.2 88,8Z"
+      android:fillColor="#FFFFFF"/>
 </vector>
