--- a/app/src/main/res/drawable/animated_background.xml
+++ b/app/src/main/res/drawable/animated_background.xml
@@ -2,6 +2,9 @@
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="false">
     <item
+        android:drawable="@drawable/fondo_f"
+        android:duration="10000" />
+    <item
         android:drawable="@drawable/fondo_e"
         android:duration="10000" />
     <item
